2010-06-28  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac (usbblaster): Move from libftdi to libusb requirement.
  * src/tap/cable/usbblaster.c: Convert from FTDX helpers to libusb helpers.

2010-06-24  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac: Merge libusb-0.x and libusb-1.x variables so that "libusb"
    in the rest of the source tree isn't tied to a specific version.
  * src/tap/cable/ice100.c: Convert API to libusb-1.x.
  * src/tap/cable/jlink.c: Likewise.
  * src/tap/cable/xpc.c: Likewise.
  * src/tap/usbconn/libusb.c: Likewise.
  * src/tap/usbconn/libusb.h: Create a small layer to convert the libusb-1.x
    API to the older libusb-0.x API if we're building against that version.

  * NEWS: Note new ice100/gnICE+ cable drivers.
  * THANKS: Credit the ice100 authors.

2010-06-23  Mike Frysinger  <vapier@gentoo.org>

  * configure.ac (fmax): Drop fmax check as it is no longer used.
  * src/tap/cable/generic.c (fmax): Drop now unused fmax fallback.

  * src/cmd/cmd_cable.c (cmd_cable_run): Fill out the cable->chain link.
  * src/tap/cable/generic.c (urj_tap_cable_generic_disconnect): Clear the
    cable->chain link once we're done with it.

  * include/urjtag/cable.h (URJ_CABLE_DRIVER): Add a quirks field, and start
    a set of quirks bitfields.
  * src/tap/detect.c (urj_tap_detect_parts): Handle new oneshot quirk.
  * src/tap/idcode.c (urj_tap_idcode): Likewise.

  * configure.ac (URJ_DRIVER_SET[cable]): Add ice100.
  * src/bfin/bfin.c (part_emulation_return): Force EMUIR to a NOP in case
    the cable goes back to run-test-idle.
  * src/tap/cable_list.h: Add ice100 cable drivers.
  * src/tap/Makefile.am: Add ice100 cable drivers.
  * src/tap/cable/ice100.c: New ice100 cable driver for Analog Devices, Inc.
    Blackfin USB Emulator-100B.
  * src/tap/cable/generic_usbconn_list.h: Add ice100 cable drivers.

2010-06-22  Mike Frysinger  <vapier@gentoo.org>

  * src/tap/usbconn/libftdi.c (usbconn_ftdi_flush): Fix gcc printf warning.
