@@ -1,7 +1,9 @@
 2010-06-28  Mike Frysinger  <vapier@gentoo.org>
 
   * configure.ac (usbblaster): Move from libftdi to libusb requirement.
-  * src/tap/cable/usbblaster.c: Convert from FTDX helpers to libusb helpers.
+  * src/tap/cable/generic_usbconn_list.h: Drop ftdx usbblaster cables and add
+    libusb usbblaser cables.
+  * src/tap/cable/usbblaster.c: Convert from libftdx helpers to libusb helpers.
 
 2010-06-24  Mike Frysinger  <vapier@gentoo.org>
 
